--- a/cit_journal_entry_attachment_zip/views/account_move_server_action.xml
+++ b/cit_journal_entry_attachment_zip/views/account_move_server_action.xml
@@ -10,7 +10,7 @@
     </record>
 
     <record model="ir.actions.server" id="action_form_attachments_download">
-        <field name="name">Download Attachmen</field>
+        <field name="name">Download Attachment</field>
         <field name="model_id" ref="account.model_account_move"/>
         <field name="binding_model_id" ref="account.model_account_move" />
         <field name="state">code</field>
